--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "league/flysystem-ftp": "3.0",
         "livewire/livewire": "^3.3",
-        "orangehill/iseed": "^3.0"
+        "orangehill/iseed": "^3.0",
+        "pbmedia/laravel-ffmpeg": "^8.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
