--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "m3u8-parser": "^7.1.0"
     }
 }
