--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "pbmedia/laravel-ffmpeg": "^8.4"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.10",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
