add video js to play hls videos

--- a/.env
+++ b/.env
@@ -63,6 +63,11 @@ FTP_USERNAME="limitedl"
 FTP_PASSWORD="@@1234limited"
 FTP_URL="https://dl.ful-stak.dev"
 
+#FTP_HOST="185.255.90.105"
+#FTP_USERNAME="dldlfuls"
+#FTP_PASSWORD="ka9386Q[]MpbKD"
+#FTP_URL="https://dl.ful-stak.dev"
+
 GITHUB_CLIENT_ID=Iv1.6369c60407c5a92c
 GITHUB_CLIENT_SECRET=f7d08c7e57ebfcd9f07a3f6296b726aa919bc03e
 GITHUB_CALLBACK_URI=http://127.0.0.1:8000/auth/github/callback
