complete payment process

--- a/.env
+++ b/.env
@@ -71,3 +71,5 @@ FTP_URL="https://dl.ful-stak.dev"
 GITHUB_CLIENT_ID=Iv1.6369c60407c5a92c
 GITHUB_CLIENT_SECRET=f7d08c7e57ebfcd9f07a3f6296b726aa919bc03e
 GITHUB_CALLBACK_URI=http://127.0.0.1:8000/auth/github/callback
+
+ZARINPAL_MERCHENT_ID=e79622e9-157e-4acc-af4c-f18c281046ef
