--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
@@ -15,7 +15,8 @@
         "livewire/livewire": "^3.3",
         "morilog/jalali": "3.*",
         "orangehill/iseed": "^3.0",
-        "pbmedia/laravel-ffmpeg": "^8.4"
+        "pbmedia/laravel-ffmpeg": "^8.4",
+        "pishran/zarinpal": "^4.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.10",
