refactor upload courseThumbnail method and chane storage root

--- a/.env
+++ b/.env
@@ -61,7 +61,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 FTP_HOST="185.24.252.75"
 FTP_USERNAME="limitedl"
 FTP_PASSWORD="@@1234limited"
-FTP_URL="https://dl.ful-stak.dev"
+FTP_URL=http://127.0.0.1:8000
 
 #FTP_HOST="185.255.90.105"
 #FTP_USERNAME="dldlfuls"
