change ftp setting for upload course cover image

--- a/.env
+++ b/.env
@@ -58,10 +58,10 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-FTP_HOST="185.24.252.75"
-FTP_USERNAME="limitedl"
-FTP_PASSWORD="@@1234limited"
-FTP_URL=http://127.0.0.1:8000
+FTP_HOST="185.255.90.105"
+FTP_USERNAME="staticfu"
+FTP_PASSWORD="8[6Ld9Vd(bX9Ne"
+FTP_URL="https://static.ful-stak.dev"
 
 #FTP_HOST="185.255.90.105"
 #FTP_USERNAME="dldlfuls"
