--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
-        "league/flysystem-ftp": "3.0",
+        "league/flysystem-ftp": "^3.24",
         "livewire/livewire": "^3.3",
         "morilog/jalali": "3.*",
         "orangehill/iseed": "^3.0",
