--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-ftp": "*",
+        "aws/aws-sdk-php": "^3.303",
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
-        "league/flysystem-ftp": "^3.24",
+        "league/flysystem-aws-s3-v3": "3.0",
+        "league/flysystem-ftp": "3.0",
         "livewire/livewire": "^3.3",
         "morilog/jalali": "3.*",
         "orangehill/iseed": "^3.0",
