--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -10,6 +13,7 @@
         "aws/aws-sdk-php": "^3.303",
         "ghasedak/laravel": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.7",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
@@ -20,7 +24,7 @@
         "livewire/livewire": "^3.3",
         "morilog/jalali": "3.*",
         "orangehill/iseed": "^3.0",
-        "pbmedia/laravel-ffmpeg": "^8.4",
+        "pbmedia/laravel-ffmpeg": "^8.5",
         "pishran/zarinpal": "^4.3"
     },
     "require-dev": {
