--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "ext-ftp": "*",
+        "artesaos/seotools": "^1.3",
         "aws/aws-sdk-php": "^3.303",
         "ghasedak/laravel": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
