--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "morilog/jalali": "3.*",
         "orangehill/iseed": "^3.0",
         "pbmedia/laravel-ffmpeg": "^8.5",
-        "pishran/zarinpal": "^4.3"
+        "pishran/zarinpal": "^4.3",
+        "stevebauman/location": "^7.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.10",
